--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <title>Xero Bulk Void Tool - V2</title>
+  <title>Xero Invoice Summarizer - V2</title>
   <link rel="stylesheet" href="/main.css">
 </head>
 
